# Multi-AgentRL

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  SUBMISSION.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
assets/: baseline_measurements.json  openenv_validate.txt  training_curves.json
blog/: BLOG.md  VIDEO_SCRIPT.md
demo-site/: index.html  package-lock.json  package.json  tailwind.config.js
demo-site/src/: App.tsx  data.ts  index.css
demo-site/src/components/: CountUp.tsx  Footer.tsx  Hero.tsx  LiveEpisode.tsx  MouseHalo.tsx  Nav.tsx  Problem.tsx  Results.tsx  Roles.tsx  Rubric.tsx  Section.tsx  Tasks.tsx
notebooks/: train_whispers_grpo.ipynb  train_whispers_grpo_kaggle.ipynb  train_whispers_grpo_kaggle_t4.ipynb  train_whispers_selfplay.ipynb
scripts/: make_plots.py  train_grpo_a6000.py
tests/: test_smoke.py
whispers/: __init__.py  client.py  env.py  models.py  reward.py  server.py  sim.py  tools.py
whispers/tasks/: __init__.py  calibrated_brief.py  cascade_chain.py  coalition_under_pressure.py  single_relay.py  spot_the_liar.py  triangulate.py
