[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispers"
version = "0.1.0"
description = "Whispers: a multi-agent information-triage OpenEnv environment for LLM RL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Whispers Team" }]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
    "openai==1.54.0",
    "httpx==0.27.2",
    "numpy==2.1.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "matplotlib==3.9.2"]

[project.scripts]
whispers-server = "whispers.server:main"

[tool.setuptools.packages.find]
include = ["whispers*"]
exclude = ["tests*", "notebooks*", "assets*"]
